--- a/HowItWorks2/integration.css
+++ b/HowItWorks2/integration.css
@@ -11,21 +11,6 @@ body {
     line-height: 1.6;
 }
 
-img,
-video {
-    border-radius: 10px;
-}
-
-pre {
-    white-space: normal;
-}
-
-/* Container */
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-}
 
 /* Navigation */
 nav {
@@ -68,6 +53,24 @@ nav ul li a {
 nav ul li a:hover {
     color: #fefeff;
     font-size: 1.1em;
+}
+
+img,
+video {
+    border-radius: 10px;
+    margin-top: 33px;
+
+}
+
+pre {
+    white-space: normal;
+}
+
+/* Container */
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
 }
 
 /* Header */
